--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,49 @@
 * {
-  margin: 0;
-  padding: 0;
+  box-sizing: border-box;
 }
 
 
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  line-height: 1.5;
   color: #646464;
+}
+
+.site-header{
+  background-color: #fff;
+
+}
+.site-header-container{
+  width: 100%;
+  max-width: 940px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sitenav-list{
+  display: flex;
+  list-style: none;
+
+}
+.sitenav-item{
+  margin-right: 16px;
+}
+
+.sitenav-item:last-child{
+  margin-right: 0;
+}
+
+.sitenav-link{
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
 }
