--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
 .sitenav-list{
   display: flex;
   list-style: none;
-
+  padding-top: 15px;
 }
 .sitenav-item{
   margin-right: 16px;
@@ -95,4 +95,94 @@ body {
   color: #fff;
   padding: 15px 17px;
   border-radius: 35px;
+}
+
+.socials{
+  width: 100%;
+  max-width: 1360px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 105px;
+}
+
+.social-one{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.social-net{
+  width: 50px;
+  height: 50px;
+  margin-right: 16px;
+}
+
+hr{
+  border: 2px solid #9DD7EB;
+  width: 1060px;
+
+}
+.section{
+  width: 100%;
+  max-width: 1350px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 50px;
+}
+
+
+.about{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.about-part{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.blocks{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.html{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 419px;
+  height: 388px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.058);
+  padding: 39px;
+}
+
+.skills{
+  width: 74px;
+  height: 74px;
+}
+
+.skills-header{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  color: #000;
+  margin: 0;
+  padding-top: 45px;
+}
+
+.skills-text{
+  padding-top: 21px;
+  font-family: 'Roboto', serif;
+  text-align: center;
+  font-size: 16px;
+  color: #646464;
+  margin: 0;
 }
