add hover styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,12 @@ body {
   margin-right: 0;
 }
 
+
+.sitenav-link:hover{
+  transition: 0.6s ease;
+  color: #018AD9;
+}
+
 .sitenav-link{
   text-transform: uppercase;
   text-decoration: none;
@@ -95,6 +101,11 @@ body {
   color: #fff;
   padding: 15px 17px;
   border-radius: 35px;
+}
+
+.hero-link:hover{
+  transition: 0.6s ease;
+  color: #000;
 }
 
 .socials{
